Project

General

Profile

Actions

Bug #22824

closed

Journaler::flush() may flush less data than expected, which causes flush waiter to hang

Added by Zheng Yan about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
osdc
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #22967: luminous: Journaler::flush() may flush less data than expected, which causes flush waiter to hangResolvedPrashant DActions
Copied to CephFS - Backport #22968: jewel: Journaler::flush() may flush less data than expected, which causes flush waiter to hangResolvedPrashant DActions
Actions #1

Updated by Zheng Yan about 6 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Patrick Donnelly about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Assignee set to Zheng Yan
  • Backport set to luminous,jewel
  • Component(FS) osdc added
Actions #3

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #22967: luminous: Journaler::flush() may flush less data than expected, which causes flush waiter to hang added
Actions #4

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #22968: jewel: Journaler::flush() may flush less data than expected, which causes flush waiter to hang added
Actions #5

Updated by Patrick Donnelly about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF